# fmr

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  vcpkg.json
cmake/: fmrConfig.cmake.in  helpers.cmake
examples/: CMakeLists.txt
examples/common/: helpers.hpp
examples/paddle/: paddleocr_ort.cpp
examples/yolo/: yolo11_ort.cpp
include/fmr/accelarators/: accelerator.h  accelerator.hpp  onnxruntime.h  onnxruntime.hpp
include/fmr/accelerators/: accelerator.hpp  onnxruntime.hpp
include/fmr/config/: paddleocrconfig.hpp  predictorconfig.h  predictorconfig.hpp  yoloconfig.h  yoloconfig.hpp
include/fmr/core/: dbpostprocess.hpp  framespersecond.hpp  image.h  image.hpp  prediction.h  prediction.hpp  types.hpp
include/fmr/paddle/ocr/: classifier.hpp  detector.hpp  pipeline.hpp  recognizer.hpp
include/fmr/wrappers/: customortallocator.h  customortallocator.hpp
include/fmr/yolo/: yolo.h  yolo.hpp
src/: fmr_global.h
src/accelarators/: onnxruntime.cpp
src/yolo/: yolo.cpp
test/: CMakeLists.txt  tst_image.cpp  tst_ort_yolo.cpp
